feat(optinal-form): Company can put optinal forms when creating job post
